--- a/src/App.css
+++ b/src/App.css
@@ -32,10 +32,9 @@ button:hover {
   position: absolute;
   top: 10px;
   right: 10px;
-  padding: 10px;
   border: none;
-  background-color: #ccc;
   cursor: pointer;
+  font-size: 2em;
 }
 
 .start-container {
@@ -44,6 +43,18 @@ button:hover {
   align-items: center;
   justify-content: center;
   height: 100vh;
+}
+
+.resolve-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.resolve-container h2 {
+  margin-bottom: 20px;
 }
 
 .logo {
@@ -95,16 +106,4 @@ button:hover {
   to {
     transform: translateY(0);
   }
-}
-
-.resolve-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.resolve-container h2 {
-  margin-bottom: 20px;
 }
